option('enable-gtk-doc', type: 'boolean', value: false, description: 'Enable generating the API reference (depends on GTK-Doc)')
option('without-gtk', type: 'boolean', value: false, description: 'Compile without GTK+ support')
option('disable-introspection', type: 'boolean', value : false, description: 'Disable GObject Introspection')
option('disable-vala', type: 'boolean', value: false, description: 'Disable generation of vala vapi file')
